# services-graph-analytics-service

./: Dockerfile  README.md  dev.sh  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  run.sh  setup.sh
app/: config.py  database.py  main.py
app/models/: schemas.py
app/routers/: __init__.py  anomaly.py  centrality.py  community.py  graph.py  path.py  prediction.py
app/services/: anomaly_service.py  base_service.py  centrality_service.py  community_service.py  neo4j_service.py  path_service.py  prediction_service.py
